--- a/templates/transactions/transaction_add.html
+++ b/templates/transactions/transaction_add.html
@@ -80,7 +80,7 @@
                             <label class="col-lg-3 control-label text-lg-end pt-2"
                                    for="inputRounded">Buyurtma</label>
                             <div class="col-lg-6">
-                                <select class="form-control mb-3"  id="order_id" name="order" required>
+                                <select class="form-control mb-3"  id="order_id" name="order">
                                 </select>
                             </div>
                         </div>
