--- a/templates/transactions/transaction_detail.html
+++ b/templates/transactions/transaction_detail.html
@@ -70,7 +70,7 @@
                             <div class="date-time-field">
                                 <div class="date">
                                     <input type="text" class="form-control form-control-modern"
-                                           value="{{ object.get_cash_type_display }}"
+                                           value="{{ object.cash_type }}"
                                            readonly>
                                 </div>
 
