--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -98,13 +98,18 @@
                         <ul class="nav nav-children">
 
                             <li>
-                                <a class="nav-link" href="{% url 'clients:debit_credit' %}">
+                                <a class="nav-link" href="#">
                                     Kompaniya
                                 </a>
                             </li>
                             <li>
                                 <a class="nav-link" href="#">
                                     Bank
+                                </a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="#">
+                                    Bog'lama turi
                                 </a>
                             </li>
 
