--- a/templates/orders/order_detail.html
+++ b/templates/orders/order_detail.html
@@ -338,7 +338,7 @@
 
             <footer class="card-footer">
                 <div class="row">
-                    <form action="{% url 'transactions:transaction_detail' order.order_number %}" method="post">
+                    <form action="{% url 'transactions:transaction_detail' order.uuid %}" method="post">
                         {% csrf_token %}
                         <div class="col-md-12 text-end">
                             <button class="btn btn-default modal-dismiss">Yoq</button>
