--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -36,7 +36,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{% url 'products:product_list' %}">
                             <i class="bx bxl-product-hunt" aria-hidden="true"></i>
                             <span>Mahsulotlar</span>
                         </a>
