--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -107,7 +107,8 @@
                                         </div>
                                     </div>
                                     <div class="form-group row align-items-center pb-3">
-                                        <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Yaratilgan vaqti</label>
+                                        <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Yaratilgan
+                                            vaqti</label>
                                         <div class="col-lg-7 col-xl-6">
                                             <input type="text" class="form-control form-control-modern"
                                                    name="productName"
@@ -126,20 +127,48 @@
 
             <div class="col-12 col-md-auto px-md-0 mt-3 mt-md-0">
                 <a href="{% url 'products:product_list' %}"
-                   class="cancel-button btn btn-light btn-px-4 py-3 border font-weight-semibold text-color-dark text-3">Orqaga</a>
+                   class="cancel-button btn btn-light btn-px-4 py-3 border font-weight-semibold text-color-dark text-3">
+                    Orqaga</a>
             </div>
             <div class="col-12 col-md-auto ms-md-auto mt-3 mt-md-0 ms-auto">
-                <a href="#"
-                   class="delete-button btn btn-danger btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1">
+                <a href="#modalBasic"
+                   class="delete-button btn btn-danger btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1  modal-basic ">
                     <i class="bx bx-trash text-4 me-2"></i> O'chirish
                 </a>
             </div>
         </div>
     </form>
-
+    <div id="modalBasic" class="modal-block mfp-hide">
+        <section class="card">
+            <header class="card-header">
+                <h2 class="card-title">Mahsulot o'chirish</h2>
+            </header>
+            <div class="card-body">
+                <div class="modal-wrapper">
+                    <div class="modal-text">
+                        <p class="mb-0">Siz mahsulotni haqiqatdan o'chirib yubormoqchimisiz ?</p>
+                    </div>
+                </div>
+            </div>
+            <footer class="card-footer">
+                <div class="row">
+                    <form action="{% url 'products:delete' object.uuid %}" method="post">
+                        {% csrf_token %}
+                        <div class="col-md-12 text-end">
+                            <button class="btn btn-default modal-dismiss">Yoq</button>
+                            <button type="submit" class="btn btn-primary">Ha</button>
+                        </div>
+                    </form>
+                </div>
+            </footer>
+        </section>
+    </div>
 
 {% endblock %}
 
 {% block additional_js %}
-
+    <!-- Examples -->
+    <script src="{% static 'vendor/select2/js/select2.js' %}"></script>
+    <script src="{% static 'vendor/pnotify/pnotify.custom.js' %}"></script>
+    <script src="{% static 'js/examples/examples.modals.js' %}"></script>
 {% endblock %}
